[package]
name = "PortForward"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tklog = "0.3.0"
clap = { version = "4.5.27", features = ["derive"] }
windows-service = "0.8.0"
aes-gcm = "0.10.3"
